# px4-mpc

mpc_msgs/: CMakeLists.txt  package.xml
px4_mpc/: CMakeLists.txt  package.xml
px4_mpc/launch/: mpc_quadrotor.launch  run.launch
px4_mpc/models/: fixedwing_longitudinal_model.py  fixedwing_rate_model.py
px4_mpc/nodes/: mpc_quadrotor.py
px4_mpc/px4_mpc/: mpc_spacecraft.py  test_fixedwing_longitudinal_closedloop.py  test_fixedwing_longitudinal_ocp.py
px4_mpc/px4_mpc/controllers/: spacecraft_offset_free_wrench_mpc.py  spacecraft_rate_mpc.py  spacecraft_wrench_mpc.py
px4_mpc/px4_mpc/launch/: mpc_spacecraft_launch.py
px4_mpc/px4_mpc/models/: spacecraft_direct_allocation_model.py  spacecraft_wrench_model.py
px4_mpc/scripts/: mpc_quadrotor.py
px4_mpc/scripts/controllers/: multirotor_rate_mpc.py
px4_mpc/scripts/models/: multirotor_rate_model.py
