<?xml version="1.0"?>
<package format="2">
  <name>mpc_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for the px4-mpc package</description>
  <maintainer email="jalim@ethz.ch">jaeyoung</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
