<?xml version="1.0"?>
<package format="2">
  <name>px4_mpc</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jalim@ethz.ch">Jaeyoung Lim</maintainer>
  <maintainer email="padr@kth.se">Pedro Roque</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>mpc_msgs</depend>

  <exec_depend>roslaunch</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
